Fix footer copyright text alignment

--- a/shared.css
+++ b/shared.css
@@ -284,7 +284,6 @@ footer a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
 }
 
 .footer-form__div form input {
